--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "upgit":"git push -u origin master"
+    "upgit": "git push -u origin master"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,10 @@
   "homepage": "https://github.com/uyshashank/Toms-Pizza#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongodb-session": "^2.1.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "mongodb": "^3.2.4"
   }
 }
