Search Console File Added

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
-    "mongodb": "^3.2.4"
+    "mongodb": "^3.2.4",
+    "swagger-node-express": "^2.1.3"
   }
 }
