--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "mongodb": "^3.2.4",
+    "node-sass": "^4.12.0",
     "swagger-node-express": "^2.1.3"
   }
 }
